instruments/AIOUSB/DLL/CoreExports.pas


        SetLength(CalTable, $10000);
        try
          InterBuf := StringReplaceC(InterBuf, #10, #13);
          J := 1;
          for I := 0 to High(CalTable) do begin
            repeat
              K := InStrC(#13, InterBuf, J);
              if K = 0 then begin
                Result := ERROR_HANDLE_EOF;
                SetLength(CalTable, 0);
                Exit;
              end
              else if K = J then begin
                Inc(J);
              end
              else begin
  {$IFDEF VER130}  // Delphi 5
                CalTable[I] := StrToInt(Trim(Copy(InterBuf, J, K - J)));
  {$ELSE}
                CalTable[I] := StrToInt(Trim(UnicodeString(Copy(InterBuf, J, K - J))));
  {$ENDIF}

                J := K + 1;
                Break;
              end;
            until False;
          end;
        except
          SetLength(CalTable, 0);
          Result := ERROR_INVALID_DATA;
          Exit;
        end;

        Result := AIOUSB_FlashEraseSector(DeviceIndex, Channel * 2);
        if Result <> ERROR_SUCCESS then Exit;
        Result := AIOUSB_FlashEraseSector(DeviceIndex, Channel * 2 + 1);
        if Result <> ERROR_SUCCESS then Exit;

        Result := AIOUSB_FlashWrite(DeviceIndex, Channel * $20000, Length(CalTable) * SizeOf(CalTable[0]), @CalTable[0]);
        SetLength(CalTable, 0);

      end;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;



function DACOutputOpen(DeviceIndex: LongWord; var ClockHz: Double): LongWord; cdecl;
var
  DCD: TDIO16ClockData;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin

      if not (bDACStream or bDACDIOStream or bDACSlowWaveStream) then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if bDACOpen or bDACClosing then begin
        Result := ERROR_TOO_MANY_OPEN_FILES;
        Exit;
      end;

      if bDACDIOStream then begin
        if bDACOpen or bDACClosing or bDIOOpen then begin
          Result := ERROR_TOO_MANY_OPEN_FILES;
          Exit;
        end;

        Result := DIO_StreamOpen(DeviceIndex, False);
        if Result <> ERROR_SUCCESS then Exit;

        DCD.Disables := $00;
        DCD.WriteOctDac := OctDacFromFreq(ClockHz);
        DCD.ReadOctDac := $0000;
        Result := GenericVendorWrite(DeviceIndex, AUR_DIO_SETCLOCKS, 0, 0, SizeOf(DCD), @DCD);
        if Result <> ERROR_SUCCESS then begin
          DIO_StreamClose(DeviceIndex);
          Exit;
        end;

        bDACOpen := True;
      end
      else if bDACSlowWaveStream then begin
        Result := GenericVendorWrite(DeviceIndex, $C7, $01, 0, 0, nil);
        if Result <> ERROR_SUCCESS then Exit;

        Result := WriteGlobalTick(DeviceIndex, @ClockHz);
        if Result <> ERROR_SUCCESS then Exit;

        bDACOpen := True;
      end
      else begin
        //DoSetIFace(Handle, $100);

        Result := GenericVendorWrite(DeviceIndex, AUR_DAC_CONTROL, $80, 0, 0, nil); //Reset
        if Result <> ERROR_SUCCESS then Exit;

        Result := GenericVendorWrite(DeviceIndex, AUR_DAC_DATAPTR, $00, 0, 0, nil); //DataPtr << 0
        if Result <> ERROR_SUCCESS then Exit;

        CtrDivisor := Round(12000000 / ClockHz);
        ClockHz := 12000000 / CtrDivisor;

        Result := GenericVendorWrite(DeviceIndex, AUR_DAC_DIVISOR, 0, CtrDivisor, 0, nil); //Set divisor
        if Result <> ERROR_SUCCESS then Exit;

        hDACDataMutex := CreateMutex(nil, False, nil);
        hDACDataSem := CreateSemaphore(nil, 0, $FFFF, nil);

        WorkerThread := TDACWorker.Create(True);
        WorkerThread.FreeOnTerminate := False;
        WorkerThread.Index := DeviceIndex;
        WorkerThread.Start;
      end;

      bDACOpen := True;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function DACOutputAbort(DeviceIndex: LongWord): LongWord; cdecl;
begin
  Result := ERROR_NOT_SUPPORTED; //To generate the hint.
  Result := ERROR_NOT_SUPPORTED; //`@
end;

function DACOutputClose(DeviceIndex: LongWord; bWait: LongBool): LongWord; cdecl;
var
  L, L2, Releases: Integer;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if not (bDACStream or bDACDIOStream or bDACSlowWaveStream) then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if not bDACOpen then begin
        Result := ERROR_FILE_NOT_FOUND;
        Exit;
      end;

      if bDACDIOStream then begin
        Result := DIO_StreamClose(DeviceIndex);
        if Result <> ERROR_SUCCESS then Exit;

        bDACOpen := False;
      end
      else if bDACSlowWaveStream then begin
        Result := ERROR_SUCCESS; //`@
        Result := ERROR_SUCCESS;

        bDACOpen := False;
      end
      else begin
        bDACOpen := False;

        //Flush pending data to worker buffer, adding EOM($8000), and release semaphore one extra time.
        WaitForSingleObject(hDACDataMutex, INFINITE);
          L := Length(DACData);
          if L = 0 then begin
            SetLength(DACData, 1);
            L2 := Length(PendingDACData);
            if L2 <> 0 then begin //No buffered buffers but we have pending data, so we'll buffer and use that.
              PendingDACData[L2] := AnsiChar(Byte(PendingDACData[L2]) or $80);
              DACData[0] := PendingDACData;
              Releases := 2;
            end
            else begin //No buffered buffers and no pending data, so buffer a little buffer so we can add EOM.
              DACData[0] := #$00#$E0; //`@
              Releases := 2;
            end;
          end
          else begin
            L2 := Length(PendingDACData);
            if L2 <> 0 then begin //Some buffered buffers, but we have pending data, so we'll buffer and use the pending data.
              SetLength(DACDAta, L + 1);
              PendingDACData[L2] := AnsiChar(Byte(PendingDACData[L2]) or $80);
              DACData[L] := PendingDACData;
              Releases := 2;
            end
            else begin //Some buffered buffers and no pending data, so we'll use the last buffer.
              Dec(L);
              L2 := Length(DACData[L]);
              DACData[L][L2] := AnsiChar(Byte(DACData[L][L2]) or $80);
              Releases := 1;
            end;
          end;
        ReleaseMutex(hDACDataMutex);
        PendingDACData := '';

        bDACClosing := True;
        ReleaseSemaphore(hDACDataSem, Releases, nil);
        {
        while WaitForSingleObject(hDACDataSem, 0) <> WAIT_TIMEOUT do
          ReleaseSemaphore(hDACDataSem, 1, nil)
        ;
        }

        {
        if bWait then begin
          //Once worker thread has drained its buffer, it checks bDACOpen, and if false it closes and reports back to us.
          //`@
        end;
        }

        WorkerThread.Terminate;
        WorkerThread.Free;
      end;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function DACOutputCloseNoEnd(DeviceIndex: LongWord; bWait: LongBool): LongWord; cdecl;
var
  L, L2, Releases: Integer;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if not (bDACStream or bDACDIOStream or bDACSlowWaveStream) then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if not bDACOpen then begin
        Result := ERROR_FILE_NOT_FOUND;
        Exit;
      end;

      if bDACDIOStream then begin
        Result := DIO_StreamClose(DeviceIndex);
        if Result <> ERROR_SUCCESS then Exit;

        bDACOpen := False;
      end
      else if bDACSlowWaveStream then begin
        Result := ERROR_SUCCESS; //`@
        Result := ERROR_SUCCESS;

        bDACOpen := False;
      end
      else begin
        bDACOpen := False;

        //Flush pending data to worker buffer, and release semaphore one extra time.
        WaitForSingleObject(hDACDataMutex, INFINITE);
          L2 := Length(PendingDACData);
          if L2 <> 0 then begin
            L := Length(DACData);
            SetLength(DACDAta, L + 1);
            DACData[L] := PendingDACData;
            Releases := 2;
          end
          else begin //No pending data, so just release the semaphore to signal end.
            Releases := 1;
          end;
        ReleaseMutex(hDACDataMutex);
        PendingDACData := '';

        bDACClosing := True;
        ReleaseSemaphore(hDACDataSem, Releases, nil);

        {
        if bWait then begin
          //Once worker thread has drained its buffer, it checks bDACOpen, and if false it closes and reports back to us.
          //`@
        end;
        }

        WorkerThread.Terminate;
        WorkerThread.Free;
      end;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function DACOutputSetCount(DeviceIndex, NewCount: LongWord): LongWord; cdecl;
var
  MaxCount: LongWord;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if not (bDACStream or bDACDIOStream or bDACSlowWaveStream) then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if not bDACOpen then begin
        Result := ERROR_FILE_NOT_FOUND;
        Exit;
      end;

      if NewCount = 0 then begin
        Result := ERROR_INVALID_PARAMETER;
        Exit;
      end;

      if bDACDIOStream then //`@ Move to TDeviceData as StreamDACs or something.
        MaxCount := 1
      else if bDACSlowWaveStream then
        MaxCount := ImmDACs
      else
        MaxCount := 8
      ;
      if NewCount > MaxCount then begin
        Result := ERROR_OUTOFMEMORY;
        Exit;
      end;

      DACsUsed := NewCount;
    end;
  except
    Result := ERROR_INTERNAL_ERROR;
  end;
end;

function DACOutputFrame(DeviceIndex, FramePoints: LongWord; FrameData: PWord): LongWord; cdecl;
const
  FrameBufferSize = 8192; //Bytes per buffer, bloody ass band-aid.

var
  I, L, Ch: Integer;
  FrameSamples, FrameBytes, FrameBuffers: Integer;
  NewDACData: TDACData;
  pSample: PWord;
  pBuffer: PAnsiChar;

begin
  try
    Result := ValidateAndEnsureOpen(DeviceIndex);
    if Result <> ERROR_SUCCESS then Exit;

    with Dev[DeviceIndex] do begin
      if bDACDIOStream or bDACSlowWaveStream then begin
        Result := DACOutputFrameRaw(DeviceIndex, FramePoints, FrameData); //There are no non-raw control bits to manipulate.
        Exit;
      end;

      if not bDACStream then begin
        Result := ERROR_BAD_TOKEN_TYPE;
        Exit;
      end;

      if not bDACOpen then begin
        Result := ERROR_FILE_NOT_FOUND;
        Exit;
      end;

      if FramePoints <= 0 then begin
        Result := ERROR_INVALID_PARAMETER;
        Exit;
      end;

      if FramePoints > 6400 then begin
        Result := ERROR_OUTOFMEMORY;
        Exit;
      end;

      WaitForSingleObject(hDACDataMutex, INFINITE);
        L := Length(DACData);
      ReleaseMutex(hDACDataMutex);

      if L > 32 then begin
        Result := ERROR_NOT_READY;
        Exit;
      end;

      try
        FrameSamples := Integer(FramePoints) * DACsUsed;
        SetString(NewDACData, PAnsiChar(FrameData), FrameSamples * SizeOf(Word));
      except
        Result := ERROR_NOACCESS;
        Exit;
      end;

      pSample := PWord(PAnsiChar(NewDACData));
      Ch := 0;
      for I := 0 to FrameSamples - 1 do begin
        pSample^ := pSample^ and $0FFF;
        Inc(Ch);
        if Ch = DACsUsed then begin
          pSample^ := pSample^ or $2000;
          Ch := 0;
        end;
        Inc(pSample);
      end;
      Dec(pSample);
      pSample^ := pSample^ or $4000;

      NewDACData := PendingDACData + NewDACData;
      FrameBytes := Length(NewDACData);
      FrameBuffers := FrameBytes div FrameBufferSize;
      pBuffer := PAnsiChar(NewDACData);
